manifests/sakabas_nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sakabas-nginx
  labels:
    name: sakabas-nginx
