manifests/sakabas_nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: sakabas-nginx
spec:
  replicas: 1
  template:
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: web
        image: "us-central1-docker.pkg.dev/hello-world-352201/nginx-gcs-proxy/nginx-gcs-proxy:latest"
        imagePullPolicy: "Always"
        ports:
        - name: http-port
          containerPort: 80
