manifests/sakabas_nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: sakabas-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http-port
